charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp
  namespace: pyapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyapp
  template:
    metadata:
      name: pyapp
      namespace: pyapp
      labels:
        app: pyapp
    spec:
      containers:
      - name: pyapp
        image: ghcr.io/zupd/pyapp:1.3
        resources:
          requests:
            cpu: "125m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "124Mi"
        ports:
        - name: http
          containerPort: 8888
        readinessProbe:
          httpGet: 
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet: 
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /myapp/data
          name: shared
      
      volumes:
        - name: shared
          emptyDir: {}
