charts/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pyapp
  namespace: pyapp
  labels:
    type: webserver
spec:
  #initContainers:
  #  - name: init
  #    image: x
  #    args:
  #    - wget xxx
  #    volumeMounts:
  #    - mountPath: /mnt/shared
  #      name: shared

  containers:
  - name: pyapp
    image: ghcr.io/zupd/pyapp:1.2
    resources:
      requests:
        cpu: "125m"
        memory: "64Mi"
      limits:
        cpu: "250m"
        memory: "124Mi"
    ports:
    - name: http
      containerPort: 8888
    readinessProbe:
      httpGet: 
        path: /
        port: http
      initialDelaySeconds: 5
      periodSeconds: 10
    livenessProbe:
      httpGet: 
        path: /
        port: http
      initialDelaySeconds: 5
      periodSeconds: 10
    #startupProbe:
    securityContext:
      readOnlyRootFilesystem: true
    volumeMounts:
    - mountPath: /myapp/data
      name: shared
  
  volumes:
    - name: shared
      emptyDir: {}
    #- persistentVolumeClaim:
    #    claimName: sdf
    #- name: etc
    #  hostPath:
    #    path: /asdf
