charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyapp-service
spec:
  selector:
    type: webserver
  type: NodePort
  ports:
  - protocol: TCP
    port: 8888
