charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyapp
  namespace: pyapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: web.example.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pyapp
            port: 
              number: 80

#    tls:
#    - hosts:
#      - web.example.com
#      secretName: example-tls
